src/App.scss
$lightGrayBlue: hsl(240, 5%, 91%);
$grey: #787887;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#root {
  width: 100vw;
  height: 100vh;
  background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));

  display: grid;
  place-items: center;
}

main {
  height: 80%;
  width: 90%;

  background-color: #fff;
  background-image: url('bg-pattern-mobile.svg');
  background-repeat: no-repeat;
  background-size: 80%;
  background-position: 50% 2.5%;


  border-radius: 22px;
  padding: 2rem;
  text-align: center;

  overflow: scroll ;

  .illustration-mobile {
    position: absolute;
    left: 20%;
    top: 0%;
    width: 60%;
  }

  .desktop-images {
    display: none;
  }

  h1 {
    margin-top: 35%;
    margin-bottom: 2rem;
    font-size: 2rem;
    font-weight: 700;
  }

  details {    
    > p {
      margin-top: 1rem;
      text-align: left;
      color: $grey;
      font-size: 14px;
    }
    
    summary {
      list-style: none;
      display: flex;
      justify-content: space-between;
      align-items: center;
    }

    summary p {
      transition:  0.3s ease;
    }

    summary img {
      transition: transform 0.3s ease;
    }
  }

  details[open] {
    summary p {
      font-weight: 700;
    }
    summary img {
      transform: rotate(180deg);
    }
  }

  .divider {
    margin: 1rem 0;
    width: 100%;
    height: 1px;
    background-color: $lightGrayBlue;
  }
}

// Tablets
@media (min-width: 450px) {
  main {
    height: 80%;
    background-size: 60%;

    .illustration-mobile {
      width: 50%;
      left: 25%;
    }
  }
}

// Small Desktop
@media (min-width: 925px) {
  main {
    height: 60%;
    width: 80%;
    background-image: url('bg-pattern-desktop.svg');
    background-size: 100%;
    background-position: -650px 70%;
    // background-position: -70% 70%;

    text-align: left;

    display: flex;
    
    overflow: hidden;

    .illustration-mobile {
      display: none;
    }

    .desktop-images {
      display: block;
    }

    .illustration-desktop {
      display: block;
      object-fit: fill;
      width: 100%;

      position: relative;
      left: -25%;
      top: 10%;
    }

    .illustration-box {
      position: absolute;
      left: 2%;
      top: 44%;
    }

    article {
      width: 50%;
      h1 {
        margin-top: 10%;
      }

      section {
        details>summary {
          cursor: pointer;
        }
      }
    }
  }
}

// Desktop
@media (min-width: 1250px) {
  main {
    height: 60%;
    width: 60%;
    .illustration-box {
      position: absolute;
      left: 14.5%;
      top: 44%;
    }
  }
}

